name:                flagger
version:             0.1.0.0
license:             MIT
author:              Andras Slemmer, Niklas Hambuechen
maintainer:          mail@nh2.me

copyright:           (c) 2012 Andras Slemmer and Niklas Hambuechen

category:            Application
build-type:          Simple
cabal-version:       >=1.8

executable flagger
  main-is: Tmp.hs
  -- other-modules:
  build-depends:
      base >= 4.5.0
    , aeson >= 0.6.0
    , ansi-terminal >= 0.5.0
    , bytestring >= 0.9.0
    , cmdargs >= 0.10
    , directory >= 1.1.0
    , ghc-prim >= 0.2.0
    , mtl >= 2.1.0
    , network >= 2.4.0
    , regex-tdfa >= 1.1.0
    , stm >= 2.3
    , time >= 1.4
    , transformers >= 0.3.0
